# IMchat

./: CMakeLists.txt
ChatClient/: CMakeLists.txt  chatwindow.cpp  chatwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  public.h  usermanager.cpp  usermanager.h
include/: public.hpp
include/db/: Connection.h
include/net/: TcpConnection.h
include/server/: ChatServer.h  chatservice.hpp
proto/: msg.pb.cc  msg.pb.h  msg.proto
src/: main.cpp
src/net/: TcpConnection.cpp
src/server/: ChatServer.cpp  chatservice.cpp
src/server/model/: UserModel.cpp  offlinemessagemodel.cpp
